# ot-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: hsl.md  monopoli.md
python-workout-app/: pyproject.toml  tasks.py
python-workout-app/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
python-workout-app/src/: database_connection.py  index.py  initialize_database.py
python-workout-app/src/entities/: user.py  workout.py
python-workout-app/src/repositories/: user_repository.py  workout_repository.py
python-workout-app/src/services/: user_service.py  workout_service.py
python-workout-app/src/tests/: test_helpers.py
python-workout-app/src/tests/repositories/: user_repository_test.py  workout_repository_test.py
python-workout-app/src/tests/services/: user_service_test.py  workout_service_test.py
python-workout-app/src/ui/: confirm_delete_view.py  create_user_view.py  create_workout_view.py  login_view.py  main_view.py  ui.py  update_workout_goal_view.py  update_workout_view.py  workouts_view.py
