[project]
name = "python-workout-app"
version = "0.1.0"
description = ""
authors = [
    {name = "Aarni Fagerström",email = "aarni.fagerstrom@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"
pytest = "^8.3.5"